installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	TempFanControl VFD-Icons Tuxtxt

install_PYTHON =	\
	__init__.py
